--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -17,18 +17,15 @@
 <!-- NAVBAR FRAGMENT -->
 <!-- Includes links to main pages -->
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav th:fragment="navbar" class="navbar navbar-expand navbar-light bg-light">
     <a class="navbar-brand" href="/home">Blog</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+    <div class="navbar" id="navbarSupportedContent">
+        <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/hello/Fortuna">Hello</a></li>
             <li class="nav-item"><a class="nav-link" href="/join">Join</a></li>
             <li class="nav-item"><a class="nav-link" href="/welcome">Welcome</a></li>
+            <li class="nav-item"><a class="nav-link" href="/roll-dice">Roll Dice</a></li>
         </ul>
     </div>
 </nav>
