--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -21,3 +21,14 @@ nav {
 #loser {
     font-size: 10em;
 }
+
+.post-div {
+    width: 80%;
+    max-width: 800px;
+    min-width: 550px;
+    border: 1px solid lightgray;
+    border-radius: 2em;
+    padding: 50px;
+    margin: 0 auto;
+    margin-bottom: 4em !important;
+}
