--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -26,6 +26,12 @@
             <li class="nav-item"><a class="nav-link" href="/join">Join</a></li>
             <li class="nav-item"><a class="nav-link" href="/welcome">Welcome</a></li>
             <li class="nav-item"><a class="nav-link" href="/roll-dice">Roll Dice</a></li>
+            <li class="nav-item">
+                <a class="nav-link dropdown-toggle" href="/posts">Posts</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/posts/create">Create</a>
+                </div>
+            </li>
         </ul>
     </div>
 </nav>
