--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -7,6 +7,8 @@
 <h2 th:text="${post.title}"></h2>
 <p th:text="${post.body}"></p>
 
+<p>Posted by: <span th:text="${post.getUser().getEmail()}"></span>
+
 <form method="GET" th:action="@{'/posts/' + ${post.getId()} + '/edit'}">
     <button class="btn btn-outline-primary">Edit</button>
 </form>
