Form model bound the create post page, need to convert the edit post page to use form model binding

--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8"/>
     <title>Home</title>
     <link th:href="@{../../css/bootstrap.css}" rel="stylesheet">
-    <link th:href="@{../../css/style.css}" rel="stylesheet" href="">
+    <link th:href="@{../../css/style.css}" rel="stylesheet">
 </head>
 
 
