--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -4,7 +4,7 @@
 <body>
 <nav th:replace="partials/partials :: navbar"></nav>
 
-<form class="w-75 mx-auto" method="POST" action="/posts/create">
+<form class="w-75 mx-auto" th:method="POST" th:action="@{/posts/create}" th:object="${post}">
     <div class="form-group row">
         <div class="col-sm-1"></div>
         <div class="col-sm-11">
@@ -15,14 +15,14 @@
     <div class="form-group row">
         <label for="title" class="col-sm-1 col-form-label text-right font-weight-bold">Title</label>
         <div class="col-sm-11">
-            <input type="text" class="form-control text-left" id="title" name="title" placeholder="Enter a title"/>
+            <input type="text" class="form-control text-left" id="title" th:field="*{title}" placeholder="Enter a title"/>
         </div>
     </div>
 
     <div class="form-group row">
         <label for="body" class="col-sm-1 col-form-label text-right font-weight-bold">Body</label>
         <div class="col-sm-11">
-            <textarea class="form-control text-left" id="body" name="body" rows="10" placeholder="Write your post here"></textarea>
+            <textarea class="form-control text-left" id="body" th:field="*{body}" rows="10" placeholder="Write your post here"></textarea>
         </div>
     </div>
 
