--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="partials/partials :: head"></head>
 <body>
+<header th:replace="partials/partials :: header"></header>
 <nav th:replace="partials/partials :: navbar"></nav>
 
 <h1 class="mb-4">Viewing all posts</h1>
