--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -4,6 +4,7 @@
 <head th:replace="partials/partials :: head"></head>
 
 <body>
+<header th:replace="partials/partials :: header"></header>
 
 <nav th:replace="partials/partials :: navbar"></nav>
 
