--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -32,3 +32,8 @@ nav {
     margin: 0 auto;
     margin-bottom: 4em !important;
 }
+
+.jumbotron-fluid {
+    margin-bottom: 0;
+    padding: 2em;
+}
