--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -14,24 +14,29 @@
 
 <body>
 
+<!-- HEADER FRAGMENT -->
+<!-- Includes fluid jumbotron that spans whole page width w/ blog name -->
+<div th:fragment="header" class="jumbotron jumbotron-fluid bg-dark text-white">
+    <div class="container">
+        <h1 class="display-4">Danielle's Blog</h1>
+        <p class="lead">Proceed with caution.</p>
+    </div>
+</div>
+
 <!-- NAVBAR FRAGMENT -->
 <!-- Includes links to main pages -->
 
 <nav th:fragment="navbar" class="navbar navbar-expand navbar-light bg-light">
-    <a class="navbar-brand" href="/home">Blog</a>
+    <a class="navbar-brand" href="/posts">Home</a>
     <div class="navbar" id="navbarSupportedContent">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="/hello/Fortuna">Hello</a></li>
-            <li class="nav-item"><a class="nav-link" href="/join">Join</a></li>
-            <li class="nav-item"><a class="nav-link" href="/welcome">Welcome</a></li>
-            <li class="nav-item"><a class="nav-link" href="/roll-dice">Roll Dice</a></li>
             <li class="nav-item">
                 <a class="nav-link dropdown-toggle" href="/posts">Posts</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/posts/create">Create</a>
                 </div>
             </li>
+            <li class="nav-item"><a class="nav-link" href="/roll-dice">Roll Dice</a></li>
         </ul>
     </div>
 </nav>
