Added login/logout functionality, need to update user to logged in user when post is created

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -37,3 +37,9 @@ nav {
     margin-bottom: 0;
     padding: 2em;
 }
+
+.link-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
