--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
 <!-- HEAD FRAGMENT -->
 <!-- Includes bootstrap and custom css style -->
@@ -29,7 +29,7 @@
 <nav th:fragment="navbar" class="navbar navbar-expand navbar-light bg-light">
     <a class="navbar-brand" href="/posts">Home</a>
     <div class="navbar" id="navbarSupportedContent">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link dropdown-toggle" href="/posts">Posts</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -37,6 +37,20 @@
                 </div>
             </li>
             <li class="nav-item"><a class="nav-link" href="/roll-dice">Roll Dice</a></li>
+        </ul>
+
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Log in</a>
+            </li>
+            <li class="nav-item">
+                <form th:action="@{/logout}" th:method="post">
+                    <input class="link-button" value="Log out" type="submit" />
+                </form>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/sign-up">Register</a>
+            </li>
         </ul>
     </div>
 </nav>
