--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <!-- HEAD FRAGMENT -->
 <!-- Includes bootstrap and custom css style -->
@@ -7,8 +7,8 @@
 <head th:fragment="head">
     <meta charset="UTF-8"/>
     <title>Home</title>
-    <link th:href="@{../../css/bootstrap.css}" rel="stylesheet">
-    <link th:href="@{../../css/style.css}" rel="stylesheet">
+    <link rel="stylesheet" href="/webjars/bootstrap/4.4.1-1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 
@@ -26,30 +26,37 @@
 <!-- NAVBAR FRAGMENT -->
 <!-- Includes links to main pages -->
 
-<nav th:fragment="navbar" class="navbar navbar-expand navbar-light bg-light">
+<nav th:fragment="navbar" class="navbar navbar-expand-sm navbar-light bg-light">
     <a class="navbar-brand" href="/posts">Home</a>
-    <div class="navbar" id="navbarSupportedContent">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <!-- left side content -->
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link dropdown-toggle" href="/posts">Posts</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Posts
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="/posts">View</a>
                     <a class="dropdown-item" href="/posts/create">Create</a>
                 </div>
             </li>
+
             <li class="nav-item"><a class="nav-link" href="/roll-dice">Roll Dice</a></li>
         </ul>
 
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/login">Log in</a>
-            </li>
-            <li class="nav-item">
-                <form th:action="@{/logout}" th:method="post">
-                    <input class="link-button" value="Log out" type="submit" />
+        <!-- right side side content -->
+        <ul class="navbar-nav navbar-right">
+            <div class="dropdown-divider"></div>
+            <li class="nav-item nav-right-link" sec:authorize="isAnonymous()"><a href="/login" class="text-black-50">Log in</a></li>
+            <li class="nav-item nav-right-link" sec:authorize="isAnonymous()"><a href="/sign-up" class="text-black-50">Register</a></li>
+            <li class="nav-item nav-right-link" sec:authorize="isAuthenticated()">
+                <form th:action="@{/logout}" method="POST">
+                    <button id="logout-btn" class="text-danger" type="submit">Log out</button>
                 </form>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/sign-up">Register</a>
             </li>
         </ul>
     </div>
@@ -60,8 +67,9 @@
 <!-- Includes jQuery and bootstrap JS links -->
 
 <standard_scripts th:fragment="footer">
-    <script th:src="@{../../js/jquery-3.5.1.min.js}"></script>
-    <script th:src="@{../../js/bootstrap.js}"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </standard_scripts>
 </body>
 </html>
