--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="partials/partials :: head"></head>
 <body>
 <header th:replace="partials/partials :: header"></header>
 <nav th:replace="partials/partials :: navbar"></nav>
 
-<h1>Log In</h1>
-<div th:if="${param.error}">
-    Invalid Username and Password.
+<div sec:authorize="isAnonymous()" class="alert alert-danger w-50 ml-auto mr-auto mb-4" role="alert">
+    You must be logged in to access this page!
 </div>
-<div th:if="${param.logout}">
+
+<div th:if="${param.error}" class="alert alert-danger w-50 mr-auto ml-auto mb-4">
+    Invalid username or password.
+</div>
+<div th:if="${param.logout}" class="alert alert-danger w-50 mr-auto ml-auto mb-4">
     You have been logged out.
 </div>
 
-<form th:action="@{/login}" method="post">
-    <label for="username">Username</label>
-    <input id="username" name="username" type="text" />
-    <label for="password">Password</label>
-    <input id="password" name="password" type="password" />
-    <input type="submit" value="Log In" />
+<form th:action="@{/login}" method="post" class="w-75 m-auto">
+    <div class="form-group row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10">
+            <h1>Log In</h1>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="inputUsername" class="col-sm-2 col-form-label">Username</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" name="username" id="inputUsername">
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" name="password" id="inputPassword">
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary">Sign in</button>
+        </div>
+    </div>
 </form>
+
 
 <standard_scripts th:replace="partials/partials :: footer"></standard_scripts>
 </body>
